--- a/.github/workflows/lo-test.yml
+++ b/.github/workflows/lo-test.yml
@@ -223,19 +223,27 @@ jobs:
 
       - name: Generate firmware
         run: |
+          echo "111"
           sudo apt update && sudo apt install qemu-utils
+          echo "111"
           sudo sysctl vm.swappiness=0
           ulimit -SHn 65000
           curl -L https://github.com/stupidloud/sshactions/releases/download/cache/ib-$DEVICE.tar.xz | tar -Jxvf -
+          echo "111"
           mv *imagebuilder* ib && cd ib
           . $GITHUB_WORKSPACE/scripts/merge_files.sh
+          echo "111"
           mkdir -p files/local_feed && sudo mount --bind packages files/local_feed
+          echo "111"
           sed -i 's/luci-app-[^ ]*//g' include/target.mk $(find target/ -name Makefile)
+          echo "111"
           sed -i 's/$(OPKG) install $(BUILD_PACKAGES)/$(OPKG) install --force-overwrite $(BUILD_PACKAGES)/' Makefile
           ls packages/*.ipk | xargs -n1 basename > package.files
           PACKAGES=$(cat $GITHUB_WORKSPACE/$DEVICE.config.seed $GITHUB_WORKSPACE/common.seed | grep CONFIG_PACKAGE | grep '=y' | grep -v CONFIG_PACKAGE_luci-app | sed 's/CONFIG_PACKAGE_//;s/=y//' | xargs -ri grep -o {} package.files | sort -u | xargs echo)
           PACKAGES="$PACKAGES `grep -o luci-i18n-opkg-zh-cn package.files || true`"
+          echo "111"
           make image PACKAGES="$PACKAGES $LUCI $LP luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn" FILES="files"
+          echo "111"
 
           mkdir -p $GITHUB_WORKSPACE/release
           mv $(ls -1 ./bin/targets/*/*/*img.gz | head -1) $GITHUB_WORKSPACE/release/$DEVICE-slim.img.gz
